Alignment Fixes For Large Displays

--- a/app/globals.css
+++ b/app/globals.css
@@ -141,7 +141,7 @@
   }
 
   .total-balance {
-    @apply flex w-[62vw] md:w-[25vw] flex-col relative max-md:pt-[10rem] md:top-[30vh] items-center gap-2 p-4 shadow-chart sm:gap-6 sm:p-6;
+    @apply flex w-[62vw] md:w-[25vw] flex-col relative max-md:pt-[10rem] md:top-[50%] items-center gap-2 p-4 shadow-chart sm:gap-6 sm:p-6;
   }
 
   .total-balance-chart {
